--- a/src/pt/iade/dsm/views/AdoptionConfirmation.fxml
+++ b/src/pt/iade/dsm/views/AdoptionConfirmation.fxml
@@ -11,7 +11,7 @@
       <Text layoutX="15.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dog : Cheddar | Corgi | ID #10-05-2019-001" wrappingWidth="426.13671875" />
       <Text layoutX="14.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bob: I have two female dogs." wrappingWidth="417.33673095703125" />
       <Text layoutX="225.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mark request as:" />
-      <ChoiceBox layoutX="321.0" layoutY="71.0" prefHeight="25.0" prefWidth="120.0" />
+      <ChoiceBox fx:id="adoptionLV" layoutX="321.0" layoutY="71.0" prefHeight="25.0" prefWidth="120.0" />
       <Button layoutX="32.0" layoutY="107.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="100.0" text="Dog Profile" />
       <Button layoutX="381.0" layoutY="127.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="49.0" text="OK" />
    </children>
