GUI Update Add Dogs for employee GUI And update from ID issues

--- a/bin/pt/iade/dsm/views/AnimalProfile.fxml
+++ b/bin/pt/iade/dsm/views/AnimalProfile.fxml
@@ -16,7 +16,7 @@
       </Text>
       <Button layoutX="296.0" layoutY="205.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="130.0" text="Adopt Me !" />
       <Text layoutX="317.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi I'm Cheddar !" />
-      <Text layoutX="307.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID #10-05-2019-001" />
+      <Text layoutX="335.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID #0005" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f8f9fa" height="117.0" layoutX="98.0" layoutY="342.0" stroke="BLACK" strokeType="INSIDE" width="522.0" />
       <Text layoutX="109.0" layoutY="363.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sprayed    Shots Up to Date    House Trained     Neutred    Pure Breed" wrappingWidth="482.13670349121094" />
       <Text layoutX="75.0" layoutY="324.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" Coat Lenght : Medium  |  Good with : Kids, Dogs, Cats" textAlignment="CENTER" wrappingWidth="572.5366973876953">
