--- a/bin/pt/iade/dsm/views/Volunteers.fxml
+++ b/bin/pt/iade/dsm/views/Volunteers.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Rectangle?>
@@ -41,12 +42,17 @@
       <Text fill="WHITE" layoutX="55.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Morning" textAlignment="CENTER" wrappingWidth="52.000000953674316" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#929090" height="49.0" layoutX="55.0" layoutY="152.0" stroke="#cfcbcb" strokeType="INSIDE" width="52.0" />
       <Text fill="WHITE" layoutX="55.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Night" textAlignment="CENTER" wrappingWidth="52.000000953674316" />
-      <Text layoutX="200.0" layoutY="287.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Telemóvel :" wrappingWidth="370.6984100341797">
+      <TextField layoutX="55.0" layoutY="260.0" promptText="First Name" />
+      <Button layoutX="351.0" layoutY="384.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="71.0" text="Submit" />
+      <Text layoutX="42.0" layoutY="347.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="370.6984100341797">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <TextField layoutX="311.0" layoutY="268.0" />
-      <Button layoutX="480.0" layoutY="268.0" mnemonicParsing="false" text="Submit" />
+      <TextField layoutX="238.0" layoutY="260.0" promptText="Last Name" />
+      <TextField layoutX="55.0" layoutY="313.0" promptText="Email" />
+      <TextField layoutX="238.0" layoutY="313.0" promptText="Phone Number" />
+      <ChoiceBox layoutX="450.0" layoutY="313.0" prefWidth="150.0" />
+      <Text layoutX="450.0" layoutY="302.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Volunteer Option Below : " wrappingWidth="193.3367919921875" />
    </children>
 </Pane>
