--- a/bin/pt/iade/dsm/views/EmployeePage.fxml
+++ b/bin/pt/iade/dsm/views/EmployeePage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.Pane?>
@@ -40,5 +41,6 @@
           
         </columns>
       </TableView>
+      <Button layoutX="589.0" layoutY="38.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="94.0" text="Upload Dog" />
    </children>
 </Pane>
