--- a/bin/pt/iade/dsm/views/LandingPage.fxml
+++ b/bin/pt/iade/dsm/views/LandingPage.fxml
@@ -2,46 +2,63 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.VBox?>
 
-<Pane maxHeight="493.0" maxWidth="721.0" minHeight="493.0" minWidth="721.0" prefHeight="493.0" prefWidth="721.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <HBox prefHeight="36.0" prefWidth="721.0" spacing="5.0">
+<BorderPane maxHeight="432.0" maxWidth="723.0" minHeight="432.0" minWidth="723.0" prefHeight="432.0" prefWidth="723.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pt.iade.dsm.views.LandingPageController">
+   <top>
+      <HBox prefHeight="43.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Region prefHeight="26.0" prefWidth="343.0">
+            <TextField maxHeight="25.6" maxWidth="148.8" minHeight="25.6" minWidth="148.8" prefHeight="25.6" prefWidth="148.8">
                <HBox.margin>
-                  <Insets top="10.0" />
-               </HBox.margin>
-            </Region>
-            <TextField>
-               <HBox.margin>
-                  <Insets top="10.0" />
+                  <Insets bottom="10.0" left="250.0" right="10.0" top="10.0" />
                </HBox.margin>
             </TextField>
-            <TextField layoutX="10.0" layoutY="10.0">
+            <PasswordField maxWidth="148.8" minHeight="25.6" minWidth="148.8" prefWidth="148.8">
                <HBox.margin>
-                  <Insets top="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
-            </TextField>
-            <Button mnemonicParsing="false" text="Log In">
+            </PasswordField>
+            <Button mnemonicParsing="false" onAction="#logInButton" prefHeight="26.0" prefWidth="58.0" text="Log In">
                <HBox.margin>
-                  <Insets top="10.0" />
+                  <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
                </HBox.margin>
             </Button>
          </children>
       </HBox>
-      <Button layoutX="66.0" layoutY="283.0" mnemonicParsing="false" prefHeight="99.0" prefWidth="149.0" text="Animals" />
-      <Button layoutX="286.0" layoutY="283.0" mnemonicParsing="false" prefHeight="99.0" prefWidth="149.0" text="Volunteers" />
-      <Button layoutX="514.0" layoutY="283.0" mnemonicParsing="false" prefHeight="99.0" prefWidth="149.0" text="Donations" />
-      <Text layoutX="71.0" layoutY="174.0" opacity="0.39" strokeType="OUTSIDE" strokeWidth="0.0" text="Dog Shelter Manager" textAlignment="CENTER" wrappingWidth="578.9368286132812">
-         <font>
-            <Font size="38.0" />
-         </font>
-      </Text>
-   </children>
-</Pane>
+   </top>
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="102.0" fitWidth="112.0" pickOnBounds="true" preserveRatio="true">
+               <VBox.margin>
+                  <Insets bottom="20.0" left="300.0" right="20.0" top="20.0" />
+               </VBox.margin>
+            </ImageView>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#animalsButton" prefHeight="103.0" prefWidth="150.0" text="Animals">
+                     <HBox.margin>
+                        <Insets left="70.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" prefHeight="103.0" prefWidth="150.0" text="Volunteer">
+                     <HBox.margin>
+                        <Insets left="70.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" prefHeight="103.0" prefWidth="150.0" text="Donation">
+                     <HBox.margin>
+                        <Insets left="70.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </center>
+</BorderPane>
