--- a/DogShelterManagerApp/bin/pt/iade/dsm/views/EditDog.fxml
+++ b/DogShelterManagerApp/bin/pt/iade/dsm/views/EditDog.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="247.0" layoutY="14.0" text="Edit Dog">
@@ -62,7 +61,7 @@
       <Button layoutX="423.0" layoutY="150.0" mnemonicParsing="false" onAction="#onUploadPushed" text="Upload photo" />
       <TextArea fx:id="obsText" layoutX="281.0" layoutY="191.0" prefHeight="107.0" prefWidth="255.0" />
       <Button layoutX="439.0" layoutY="319.0" mnemonicParsing="false" onAction="#onSubmitPushed" text="Submit Changes" />
-      <GridPane layoutX="120.0" layoutY="66.0" prefHeight="113.0" prefWidth="127.0">
+      <GridPane layoutX="109.0" layoutY="66.0" prefHeight="64.0" prefWidth="138.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -75,23 +74,42 @@
          <children>
             <Label text="Name:">
                <padding>
-                  <Insets left="22.0" />
+                  <Insets left="23.0" />
                </padding>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
             <Label text="ID:" GridPane.rowIndex="1">
                <padding>
-                  <Insets left="42.0" />
+                  <Insets left="46.0" />
                </padding>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
             <Label text="Gender:" GridPane.rowIndex="2">
                <padding>
                   <Insets left="15.0" />
                </padding>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
-            <Label fx:id="nameL" text="Label" GridPane.columnIndex="1" />
-            <Label fx:id="idL" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label fx:id="genderL" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="nameL" text="Label" GridPane.columnIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label fx:id="idL" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label fx:id="genderL" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
          </children>
       </GridPane>
+      <Label fx:id="eMSG" layoutX="81.0" layoutY="323.0" text="Label" />
    </children>
 </AnchorPane>
