--- a/DogShelterManagerApp/src/pt/iade/dsm/views/CreateVolunteer.fxml
+++ b/DogShelterManagerApp/src/pt/iade/dsm/views/CreateVolunteer.fxml
@@ -38,7 +38,7 @@
             <TextField fx:id="lName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="email" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="phone" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="adress" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="address" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <DatePicker fx:id="birthdate" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <Label text="Birthdate:" GridPane.rowIndex="6" />
             <PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="5" />
